@@ -1,1 +1,2 @@
 DIST libnotify-0.8.0.gem 29184 SHA256 f0bfaf6ffd2203007b109d0bc8176e01939700af861d699d280fd59a4ecaa253 SHA512 657c154420afb9441459b927144a8b2a5a94353d772e945ce0c90b755238d4dbecfccb84935477d94560b6564ff52095a1cb1120947d27aeee145d5c45130569 WHIRLPOOL e14d5d6698f7f23b1d20d265cbd8a6f9d59205797b820b6e6f361503597a386df0b7e7789d401425ca6ae0dca8c4dbc30ec5d43a5c30abfefdf676ce1dabc5f1
+DIST libnotify-0.8.2.gem 31232 SHA256 ea2f87d918d6bcc03928d8b630498aa52f37f59a289107dae8306b6a133c1d0f SHA512 0ce2afa6670ed6e89b3603568ad5629e6b056293da8e5f8ad1851338d2eb61a3de24342f14eafffe32fc6b865c494dd0ffb51fd763fbc1197025f83bbdbc7f5e WHIRLPOOL f6d80c7d1820ce132c5872bac68b00c755567d6a2a779520c9d84da92d9b425425f18a16d2724b76f7f2cf1b9d6ce3a172d203d7175e6c7f29d5c2c7a2b484ff
