@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libnotify-0.8.2 (01 Nov 2013)
+
+  01 Nov 2013; Hans de Graaff <graaff@gentoo.org> +libnotify-0.8.2.ebuild:
+  Version bump.
+
   01 Nov 2013; Hans de Graaff <graaff@gentoo.org> -libnotify-0.5.7.ebuild,
   -libnotify-0.7.1.ebuild, -libnotify-0.7.2.ebuild:
   Cleanup.
